--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = isort, black, flake8, mypy, safety, py3{7,8,9}
 [gh-actions]
 python =
     3.7: py37
-    3.8: isort, black, flake8, mypy, safety, py38
+    3.8: isort, black, flake8, safety, py38
     3.9: py39
 
 [testenv]
@@ -122,4 +122,16 @@ disallow_incomplete_defs = True
 ignore_missing_imports = True
 
 [mypy-requests.*]
+ignore_missing_imports = True
+
+[mypy-libcombine.*]
+ignore_missing_imports = True
+
+[mypy-kisao.*]
+ignore_missing_imports = True
+
+[mypy-pronto.*]
+ignore_missing_imports = True
+
+[mypy-libchebipy.*]
 ignore_missing_imports = True
