--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,14 +3,14 @@ name: CI-CD
 on:
   push:
     branches:
-    - master
+    - main
     - develop
     tags:
       - '[0-9]+.[0-9]+.[0-9]+'
       - '[0-9]+.[0-9]+.[0-9]+a[0-9]+'
   pull_request:
     branches:
-    - master
+    - main
     - develop
 
 jobs:
