--- a/setup.cfg
+++ b/setup.cfg
@@ -49,12 +49,14 @@ python_requires = >=3.7
 install_requires =
 	depinfo>=0.1.7
 	requests>=2.25.1
-	python-libcombine>=0.2.11
-	kisao>=2.21
+	uuid>=1-30
 	pronto>=2.4.2
 	libchebipy>=1.0.10
 	numpy>=1.21
-    uuid
+	python-libcombine>=0.2.11
+	rich>=10.9.0
+	jinja2>=3.0.1
+    
 tests_require =
 	tox>=3.23.1
 	pytest>=6.2.2
