fixes for release

--- a/tox.ini
+++ b/tox.ini
@@ -135,3 +135,6 @@ ignore_missing_imports = True
 
 [mypy-libchebipy.*]
 ignore_missing_imports = True
+
+[mypy-rich.*]
+ignore_missing_imports = True
