--- a/setup.cfg
+++ b/setup.cfg
@@ -64,8 +64,11 @@ setup_requires =
 packages = find:
 package_dir =
 	= src
-package_data={"pymetadata": ["py.typed"]}
+# package_data={"pymetadata": ["py.typed"]}
 include_package_data = True
+
+[options.package_data]
+pymetadata = py.typed
 
 [aliases]
 test = pytest
