--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,6 @@
 name: CI-CD
 
-on:
-  push:
-    tags:
-      - '[0-9]+.[0-9]+.[0-9]+'
-      - '[0-9]+.[0-9]+.[0-9]+a[0-9]+'
-  pull_request:
-    branches:
-    - main
-    - develop
-
+on: [push]
 jobs:
   test:
     runs-on: ${{ matrix.os }}
