Fix #13, zenodo metadata

--- a/tox.ini
+++ b/tox.ini
@@ -127,9 +127,6 @@ ignore_missing_imports = True
 [mypy-libcombine.*]
 ignore_missing_imports = True
 
-[mypy-kisao.*]
-ignore_missing_imports = True
-
 [mypy-pronto.*]
 ignore_missing_imports = True
 
@@ -137,4 +134,10 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-rich.*]
+ignore_missing_imports = True
+
+[mypy-jinja2.*]
+ignore_missing_imports = True
+
+[mypy-numpy.*]
 ignore_missing_imports = True
