--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ parse = (?P<major>\d+)
 	\.(?P<minor>\d+)
 	\.(?P<patch>\d+)
 	(?P<release>[a]*)(?P<num>\d*)
-serialize = 
+serialize =
 	{major}.{minor}.{patch}{release}{num}
 	{major}.{minor}.{patch}
 tag_name = {new_version}
@@ -15,7 +15,7 @@ tag_name = {new_version}
 name = pymetadata
 url = https://github.com/matthiaskoenig/pymetadata
 download_url = https://pypi.org/project/pymetadata
-project_urls = 
+project_urls =
 	Source Code = https://github.com/matthiaskoenig/pymetadata
 	Documentation = https://github.com/matthiaskoenig/pymetadata
 	Bug Tracker = https://github.com/matthiaskoenig/pymetadata/issues
@@ -23,7 +23,7 @@ author = Matthias Koenig
 author_email = konigmatt@googlemail.com
 maintainer = Matthias Koenig
 maintainer_email = konigmatt@googlemail.com
-classifiers = 
+classifiers =
 	Development Status :: 4 - Beta
 	Intended Audience :: Science/Research
 	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
@@ -38,32 +38,34 @@ license = LGPL-3.0
 description = pymetadata are python utilities for working with metadata.
 long_description = file: README.rst
 long_description_content_type = text/x-rst
-keywords = 
+keywords =
 	modeling
 	standardization
+    COMBINE
 	metadata
 
 [options]
 zip_safe = True
 python_requires = >=3.7
-install_requires = 
+install_requires =
 	pip>=21.2
 	depinfo>=0.1.7
-	requests>=2.25.1
-	uuid>=1-30
+    rich>=10.9.0
+	numpy>=1.21
+    requests>=2.25.1
+	uuid>=1.30
 	pronto>=2.4.2
 	libchebipy>=1.0.10
-	numpy>=1.21
-	python-libcombine>=0.2.11
-	rich>=10.9.0
+	python-libcombine>=0.2.13
 	jinja2>=3.0.1
-tests_require = 
+
+tests_require =
 	tox>=3.23.1
 	pytest>=6.2.2
-setup_requires = 
+setup_requires =
 	pytest-runner
 packages = find:
-package_dir = 
+package_dir =
 	= src
 include_package_data = True
 
@@ -77,13 +79,17 @@ test = pytest
 where = src
 
 [options.extras_require]
-development = 
-	pip-tools
+development =
+    pip-tools
 	black>=21.7b0
 	bump2version>=1.0.1
 	isort>=5.9.3
 	tox>=3.24.3
+	flake8
+	flake8-mypy
+	mypy
 	pytest>=6.2.2
+	pytest-cov>=2.8.1
 
 [bdist_wheel]
 universal = 1
@@ -91,7 +97,7 @@ universal = 1
 [bumpversion:part:release]
 optional_value = placeholder
 first_value = placeholder
-values = 
+values =
 	placeholder
 	a
 
