--- a/setup.cfg
+++ b/setup.cfg
@@ -48,15 +48,15 @@ keywords =
 zip_safe = True
 python_requires = >=3.7
 install_requires =
-	pip>=21.2
 	depinfo>=0.1.7
+    lxml>=4.6.3
     rich>=10.9.0
-	numpy>=1.21
     requests>=2.25.1
+    zeep>=4.1.0
 	uuid>=1.30
 	pronto>=2.4.2
-	libchebipy>=1.0.10
 	python-libcombine>=0.2.13
+    pyomexmeta>=1.2.13
 	jinja2>=3.0.1
 
 tests_require =
@@ -81,13 +81,13 @@ where = src
 [options.extras_require]
 development =
     pip-tools
-	black>=21.7b0
+	black>=21.9b0
 	bump2version>=1.0.1
 	isort>=5.9.3
 	tox>=3.24.3
-	flake8
-	flake8-mypy
-	mypy
+	flake8>=3.9.2
+	flake8-mypy>=17.8.0
+	mypy>=0.910
 	pytest>=6.2.2
 	pytest-cov>=2.8.1
 
