--- a/tox.ini
+++ b/tox.ini
@@ -130,14 +130,11 @@ ignore_missing_imports = True
 [mypy-pronto.*]
 ignore_missing_imports = True
 
-[mypy-libchebipy.*]
-ignore_missing_imports = True
-
 [mypy-rich.*]
 ignore_missing_imports = True
 
 [mypy-jinja2.*]
 ignore_missing_imports = True
 
-[mypy-numpy.*]
+[mypy-zeep.*]
 ignore_missing_imports = True
