workon on archive support

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ parse = (?P<major>\d+)
 	\.(?P<minor>\d+)
 	\.(?P<patch>\d+)
 	(?P<release>[a]*)(?P<num>\d*)
-serialize = 
+serialize =
 	{major}.{minor}.{patch}{release}{num}
 	{major}.{minor}.{patch}
 tag_name = {new_version}
@@ -15,7 +15,7 @@ tag_name = {new_version}
 name = pymetadata
 url = https://github.com/matthiaskoenig/pymetadata
 download_url = https://pypi.org/project/pymetadata
-project_urls = 
+project_urls =
 	Source Code = https://github.com/matthiaskoenig/pymetadata
 	Documentation = https://github.com/matthiaskoenig/pymetadata
 	Bug Tracker = https://github.com/matthiaskoenig/pymetadata/issues
@@ -23,7 +23,7 @@ author = Matthias Koenig
 author_email = konigmatt@googlemail.com
 maintainer = Matthias Koenig
 maintainer_email = konigmatt@googlemail.com
-classifiers = 
+classifiers =
 	Development Status :: 4 - Beta
 	Intended Audience :: Science/Research
 	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
@@ -38,7 +38,7 @@ license = LGPL-3.0
 description = pymetadata are python utilities for working with metadata.
 long_description = file: README.rst
 long_description_content_type = text/x-rst
-keywords = 
+keywords =
 	modeling
 	standardization
 	COMBINE
@@ -47,7 +47,7 @@ keywords =
 [options]
 zip_safe = True
 python_requires = >=3.7
-install_requires = 
+install_requires =
 	depinfo>=0.1.7
 	lxml>=4.6.3
 	rich>=10.9.0
@@ -58,13 +58,15 @@ install_requires =
 	python-libcombine>=0.2.13
 	pyomexmeta>=1.2.13
 	jinja2>=3.0.1
-tests_require = 
+    xmltodict>=0.12.0
+    pydantic>=1.8.2
+tests_require =
 	tox>=3.23.1
 	pytest>=6.2.2
-setup_requires = 
+setup_requires =
 	pytest-runner
 packages = find:
-package_dir = 
+package_dir =
 	= src
 include_package_data = True
 
@@ -78,7 +80,7 @@ test = pytest
 where = src
 
 [options.extras_require]
-development = 
+development =
 	pip-tools
 	black>=21.9b0
 	bump2version>=1.0.1
@@ -96,7 +98,7 @@ universal = 1
 [bumpversion:part:release]
 optional_value = placeholder
 first_value = placeholder
-values = 
+values =
 	placeholder
 	a
 
