Fix #15, COMBINE archive support

--- a/tox.ini
+++ b/tox.ini
@@ -138,3 +138,6 @@ ignore_missing_imports = True
 
 [mypy-zeep.*]
 ignore_missing_imports = True
+
+[mypy-xmltodict.*]
+ignore_missing_imports = True
