Fix #24, Fix #23, drop py37 support

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,8 @@
 [tox]
-envlist = isort, black, flake8, mypy, safety, py3{7,8,9,10}
+envlist = isort, black, flake8, mypy, safety, py3{8,9,10}
 
 [gh-actions]
 python =
-    3.7: py37
     3.8: py38
     3.9: isort, black, flake8, safety, py39
     3.10: py310
@@ -120,6 +119,9 @@ disallow_untyped_defs = True
 disallow_incomplete_defs = True
 
 [mypy-pytest.*]
+ignore_missing_imports = True
+
+[mypy-pydantic.*]
 ignore_missing_imports = True
 
 [mypy-requests.*]
