--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ parse = (?P<major>\d+)
 	\.(?P<minor>\d+)
 	\.(?P<patch>\d+)
 	(?P<release>[a]*)(?P<num>\d*)
-serialize = 
+serialize =
 	{major}.{minor}.{patch}{release}{num}
 	{major}.{minor}.{patch}
 tag_name = {new_version}
@@ -15,7 +15,7 @@ tag_name = {new_version}
 name = pymetadata
 url = https://github.com/matthiaskoenig/pymetadata
 download_url = https://pypi.org/project/pymetadata
-project_urls = 
+project_urls =
 	Source Code = https://github.com/matthiaskoenig/pymetadata
 	Documentation = https://github.com/matthiaskoenig/pymetadata
 	Bug Tracker = https://github.com/matthiaskoenig/pymetadata/issues
@@ -23,14 +23,14 @@ author = Matthias Koenig
 author_email = konigmatt@googlemail.com
 maintainer = Matthias Koenig
 maintainer_email = konigmatt@googlemail.com
-classifiers = 
+classifiers =
 	Development Status :: 4 - Beta
 	Intended Audience :: Science/Research
 	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
 	Operating System :: OS Independent
-	Programming Language :: Python :: 3.7
 	Programming Language :: Python :: 3.8
 	Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
 	Programming Language :: Python :: Implementation :: CPython
 	Topic :: Scientific/Engineering
 	Topic :: Scientific/Engineering :: Bio-Informatics
@@ -38,7 +38,7 @@ license = LGPL-3.0
 description = pymetadata are python utilities for working with metadata.
 long_description = file: README.rst
 long_description_content_type = text/x-rst
-keywords = 
+keywords =
 	modeling
 	standardization
 	COMBINE
@@ -46,25 +46,26 @@ keywords =
 
 [options]
 zip_safe = True
-python_requires = >=3.7
-install_requires = 
+python_requires = >=3.8
+install_requires =
 	depinfo>=0.1.7
-	lxml>=4.6.3
-	rich>=10.9.0
-	requests>=2.25.1
+	lxml>=4.7.1
+	rich>=11.2.0
+	requests>=2.27.1
 	zeep>=4.1.0
 	uuid>=1.30
-	pronto>=2.4.2
+	pronto>=2.4.4
 	jinja2>=2.11
 	xmltodict>=0.12.0
-	pydantic>=1.8.2
-tests_require = 
-	tox>=3.23.1
-	pytest>=6.2.2
-setup_requires = 
+	pydantic>=1.9.0
+tests_require =
+	tox>=3.24.5
+	pytest>=7.0.1
+    pytest-cov>=3.0.0
+setup_requires =
 	pytest-runner
 packages = find:
-package_dir = 
+package_dir =
 	= src
 include_package_data = True
 
@@ -78,17 +79,17 @@ test = pytest
 where = src
 
 [options.extras_require]
-development = 
-	pip-tools
-	black>=21.9b0
+development =
+	pip-tools>6.5.1
+	black>=22.1.0
 	bump2version>=1.0.1
-	isort>=5.9.3
+	isort>=5.10.1
 	tox>=3.24.3
-	flake8>=3.9.2
+	flake8>=4.0.1
 	flake8-mypy>=17.8.0
-	mypy>=0.910
-	pytest>=6.2.2
-	pytest-cov>=2.8.1
+	mypy>=0.931
+	pytest>=7.0.1
+    pytest-cov>=3.0.0
 
 [bdist_wheel]
 universal = 1
@@ -96,7 +97,7 @@ universal = 1
 [bumpversion:part:release]
 optional_value = placeholder
 first_value = placeholder
-values = 
+values =
 	placeholder
 	a
 
