--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ parse = (?P<major>\d+)
 	\.(?P<minor>\d+)
 	\.(?P<patch>\d+)
 	(?P<release>[a]*)(?P<num>\d*)
-serialize = 
+serialize =
 	{major}.{minor}.{patch}{release}{num}
 	{major}.{minor}.{patch}
 tag_name = {new_version}
@@ -15,7 +15,7 @@ tag_name = {new_version}
 name = pymetadata
 url = https://github.com/matthiaskoenig/pymetadata
 download_url = https://pypi.org/project/pymetadata
-project_urls = 
+project_urls =
 	Source Code = https://github.com/matthiaskoenig/pymetadata
 	Documentation = https://github.com/matthiaskoenig/pymetadata
 	Bug Tracker = https://github.com/matthiaskoenig/pymetadata/issues
@@ -23,7 +23,7 @@ author = Matthias Koenig
 author_email = konigmatt@googlemail.com
 maintainer = Matthias Koenig
 maintainer_email = konigmatt@googlemail.com
-classifiers = 
+classifiers =
 	Development Status :: 4 - Beta
 	Intended Audience :: Science/Research
 	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
@@ -38,16 +38,18 @@ license = LGPL-3.0
 description = pymetadata are python utilities for working with metadata.
 long_description = file: README.rst
 long_description_content_type = text/x-rst
-keywords = 
+keywords =
 	modeling
 	standardization
 	COMBINE
 	metadata
+    archive
+    annotation
 
 [options]
 zip_safe = True
 python_requires = >=3.8
-install_requires = 
+install_requires =
 	depinfo>=0.1.7
 	lxml>=4.7.1
 	rich>=11.2.0
@@ -58,14 +60,14 @@ install_requires =
 	jinja2>=2.11
 	xmltodict>=0.12.0
 	pydantic>=1.9.0
-tests_require = 
+tests_require =
 	tox>=3.24.5
 	pytest>=7.0.1
 	pytest-cov>=3.0.0
-setup_requires = 
+setup_requires =
 	pytest-runner
 packages = find:
-package_dir = 
+package_dir =
 	= src
 include_package_data = True
 
@@ -79,7 +81,7 @@ test = pytest
 where = src
 
 [options.extras_require]
-development = 
+development =
 	pip-tools>6.5.1
 	black>=22.1.0
 	bump2version>=1.0.1
@@ -97,7 +99,7 @@ universal = 1
 [bumpversion:part:release]
 optional_value = placeholder
 first_value = placeholder
-values = 
+values =
 	placeholder
 	a
 
