--- a/tox.ini
+++ b/tox.ini
@@ -13,21 +13,21 @@ deps=
     pytest-cov
     pytest-raises
 commands =
-    pytest --cov=pymetadata --cov-report=term --cov-report=xml
+    pytest --cov=pymetadata --cov-report=xml
 
 [testenv:isort]
 skip_install = True
 deps=
-    isort >=5.5,<6
+    isort
 commands=
-    isort --check-only --diff {toxinidir}/src/pymetadata {toxinidir}/setup.py
+    isort --check-only --diff {toxinidir}/src/pymetadata {toxinidir}/setup.py {toxinidir}/tests
 
 [testenv:black]
 skip_install = True
 deps=
     black
 commands=
-    black --check --diff {toxinidir}/src/pymetadata {toxinidir}/setup.py
+    black --check --diff {toxinidir}/src/pymetadata {toxinidir}/setup.py {toxinidir}/tests
 
 [testenv:flake8]
 skip_install = True
@@ -37,12 +37,11 @@ deps=
     flake8-docstrings
     flake8-bugbear
 commands=
-    flake8 {toxinidir}/src/pymetadata {toxinidir}/setup.py --exclude=test --extend-ignore=E501,F401,F403,F405,D107
-# D107 Missing docstring in __init__
+    flake8 {toxinidir}/src/pymetadata {toxinidir}/setup.py {toxinidir}/tests --extend-ignore=F401,F403,F405,E501
 # F401 : module imported but unused
 # F403 : 'from .x import *' used; unable to detect undefined names
 # F405 : name may be undefined, or defined from star imports: module
-# E501 : line too long (handled by black)
+# E501 : line too long
 
 [testenv:mypy]
 skip_install = True
@@ -50,7 +49,7 @@ skip_install = True
 deps=
     mypy
 commands=
-    mypy {toxinidir}/src/pymetadata {toxinidir}/setup.py --config-file tox.ini
+    mypy {toxinidir}/src/pymetadata {toxinidir}/setup.py {toxinidir}/tests --config-file tox.ini
 
 [testenv:safety]
 deps=
@@ -58,13 +57,23 @@ deps=
 commands=
     safety check --full-report
 
+[testenv:install]
+skip_install = True
+deps=
+    build
+    twine
+commands=
+    pip check {toxinidir}
+    python -m build {toxinidir}
+    twine check {toxinidir}/dist/*
+
 ################################################################################
 # Testing tools configuration                                                  #
 ################################################################################
 
 [pytest]
 testpaths =
-    src/pymetadata/test
+    tests
 markers =
     raises
 
@@ -76,25 +85,16 @@ source =
 [coverage:run]
 branch = true
 parallel = true
-omit =
-    */pymetadata/test/*
 
 [coverage:report]
 exclude_lines =
 # Have to re-enable the standard pragma
     pragma: no cover
 precision = 2
-omit =
-    */pymetadata/test/*
 
 [isort]
 skip = __init__.py
-line_length = 88
-indent = 4
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
+profile = black
 lines_after_imports = 2
 known_first_party = pymetadata
 known_third_party =
