fixing mypy issues

--- a/tox.ini
+++ b/tox.ini
@@ -136,6 +136,15 @@ ignore_missing_imports = True
 [mypy-rich.*]
 ignore_missing_imports = True
 
+[mypy-nltk.*]
+ignore_missing_imports = True
+
+[mypy-nltk.stem.*]
+ignore_missing_imports = True
+
+[mypy-numpy.*]
+ignore_missing_imports = True
+
 [mypy-jinja2.*]
 ignore_missing_imports = True
 
