--- a/setup.cfg
+++ b/setup.cfg
@@ -52,21 +52,18 @@ zip_safe = True
 python_requires = >=3.8
 install_requires =
 	depinfo>=1.7
-	lxml>=4.9.1
-	rich>=12.5.1
-	requests>=2.28.1
-	zeep>=4.1.0
 	uuid>=1.30
-	pronto>=2.5.0
+    lxml>=4.9.1
+	rich>=12.6.0
+	requests>=2.28.1
+	zeep>=4.2.0
+	pronto>=2.5.1
 	jinja2>=3.1.2
 	xmltodict>=0.13.0
 	pydantic>=1.10.2
 tests_require =
-	tox>=3.25.1
-	pytest>=7.1.3
-	pytest-cov>=3.0.0
-setup_requires =
-	pytest-runner>=6.0.0
+	tox>=3.27
+    pytest
 packages = find:
 package_dir =
 	= src
@@ -86,8 +83,8 @@ development =
 	pip-tools>6.5.1
 	black>=22.1.0
 	bump2version>=1.0.1
-	isort>=5.10.1
-	tox>=3.24.3
+	isort>=5.10
+	tox>=3.25
 	flake8>=4.0.1
 	flake8-mypy>=17.8.0
 	mypy>=0.931
