--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ parse = (?P<major>\d+)
 	\.(?P<minor>\d+)
 	\.(?P<patch>\d+)
 	(?P<release>[a]*)(?P<num>\d*)
-serialize = 
+serialize =
 	{major}.{minor}.{patch}{release}{num}
 	{major}.{minor}.{patch}
 tag_name = {new_version}
@@ -15,7 +15,7 @@ tag_name = {new_version}
 name = pymetadata
 url = https://github.com/matthiaskoenig/pymetadata
 download_url = https://pypi.org/project/pymetadata
-project_urls = 
+project_urls =
 	Source Code = https://github.com/matthiaskoenig/pymetadata
 	Documentation = https://github.com/matthiaskoenig/pymetadata
 	Bug Tracker = https://github.com/matthiaskoenig/pymetadata/issues
@@ -23,7 +23,7 @@ author = Matthias Koenig
 author_email = konigmatt@googlemail.com
 maintainer = Matthias Koenig
 maintainer_email = konigmatt@googlemail.com
-classifiers = 
+classifiers =
 	Development Status :: 4 - Beta
 	Intended Audience :: Science/Research
 	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
@@ -39,7 +39,7 @@ license = LGPL-3.0
 description = pymetadata are python utilities for working with metadata.
 long_description = file: README.rst
 long_description_content_type = text/x-rst
-keywords = 
+keywords =
 	modeling
 	standardization
 	COMBINE
@@ -50,22 +50,22 @@ keywords =
 [options]
 zip_safe = True
 python_requires = >=3.9
-install_requires = 
+install_requires =
 	depinfo>=1.7
-	lxml>=4.9
-	rich>=13.6
+	lxml>=5.2
+	rich>=13.7
 	requests>=2.31
 	zeep>=4.2.1
-	pronto>=2.5.5
-	fastobo>=0.12.2
-	jinja2>=3.1.2
+	pronto>=2.5.6
+	fastobo>=0.12.3
+	jinja2>=3.1
 	xmltodict>=0.13.0
-	pydantic>=2.4
-tests_require = 
-	tox>=3.27
-	pytest
+	pydantic>=2.6
+tests_require =
+	tox>=4.14.2
+	pytest>=8.1.1
 packages = find:
-package_dir = 
+package_dir =
 	= src
 include_package_data = True
 
@@ -79,17 +79,17 @@ test = pytest
 where = src
 
 [options.extras_require]
-development = 
-	pip-tools>6.10
-	black>=24.1.1
+development =
+	pip-tools>=7.4.1
+	black>=24.3.0
 	bump2version>=1.0.1
 	isort>=5.13.2
-	tox>=4.12.1
-	flake8>=6.1.0
+	tox>=4.12.2
+	flake8>=7.0.0
 	flake8-mypy>=17.8.0
-	mypy>=1.8.0
-	pytest>=8.0.0
-	pytest-cov>=4.1.0
+	mypy>=1.9.0
+	pytest>=8.1.1
+	pytest-cov>=5.0.0
 
 [bdist_wheel]
 universal = 1
@@ -97,7 +97,7 @@ universal = 1
 [bumpversion:part:release]
 optional_value = placeholder
 first_value = placeholder
-values = 
+values =
 	placeholder
 	a
 
