--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ parse = (?P<major>\d+)
 	\.(?P<minor>\d+)
 	\.(?P<patch>\d+)
 	(?P<release>[a]*)(?P<num>\d*)
-serialize = 
+serialize =
 	{major}.{minor}.{patch}{release}{num}
 	{major}.{minor}.{patch}
 tag_name = {new_version}
@@ -15,23 +15,23 @@ tag_name = {new_version}
 name = pymetadata
 url = https://github.com/matthiaskoenig/pymetadata
 download_url = https://pypi.org/project/pymetadata
-project_urls = 
+project_urls =
 	Source Code = https://github.com/matthiaskoenig/pymetadata
 	Documentation = https://github.com/matthiaskoenig/pymetadata
 	Bug Tracker = https://github.com/matthiaskoenig/pymetadata/issues
 author = Matthias Koenig
 author_email = konigmatt@googlemail.com
-maintainer = Matthias Koenig
+maintainer = Matthias König
 maintainer_email = konigmatt@googlemail.com
-classifiers = 
+classifiers =
 	Development Status :: 4 - Beta
 	Intended Audience :: Science/Research
 	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
 	Operating System :: OS Independent
-	Programming Language :: Python :: 3.9
 	Programming Language :: Python :: 3.10
 	Programming Language :: Python :: 3.11
 	Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
 	Programming Language :: Python :: Implementation :: CPython
 	Topic :: Scientific/Engineering
 	Topic :: Scientific/Engineering :: Bio-Informatics
@@ -39,7 +39,7 @@ license = LGPL-3.0
 description = pymetadata are python utilities for working with metadata.
 long_description = file: README.rst
 long_description_content_type = text/x-rst
-keywords = 
+keywords =
 	modeling
 	standardization
 	COMBINE
@@ -49,8 +49,8 @@ keywords =
 
 [options]
 zip_safe = True
-python_requires = >=3.9
-install_requires = 
+python_requires = >=3.10
+install_requires =
 	depinfo>=1.7
 	lxml>=5.2
 	rich>=13.7
@@ -61,11 +61,11 @@ install_requires =
 	jinja2>=3.1
 	xmltodict>=0.13.0
 	pydantic>=2.6
-tests_require = 
+tests_require =
 	tox>=4.14.2
 	pytest>=8.1.1
 packages = find:
-package_dir = 
+package_dir =
 	= src
 include_package_data = True
 
@@ -79,7 +79,7 @@ test = pytest
 where = src
 
 [options.extras_require]
-development = 
+development =
 	pip-tools>=7.4.1
 	black>=24.3.0
 	bump2version>=1.0.1
@@ -97,7 +97,7 @@ universal = 1
 [bumpversion:part:release]
 optional_value = placeholder
 first_value = placeholder
-values = 
+values =
 	placeholder
 	a
 
