--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip setuptools wheel
+        python -m pip install --upgrade pip wheel
         python -m pip install tox tox-gh-actions
+
+    # Update output format to enable automatic inline annotations.
     - name: Test with tox
       run:
         tox --
