--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "pymetadata"
-version = "0.4.4"
+dynamic = ["version"]
 description = "pymetadata are python utilities for working with metadata."
 readme = "README.rst"
 requires-python = ">=3.10"
@@ -50,7 +50,7 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "bump2version>=1.0.1",
+    "bump-my-version>=0.29.0",
 	"ruff>=0.8.6",
 	"pre-commit>=4.0.1",
 	"mypy>=1.9.0",
@@ -68,6 +68,8 @@ Documentation = "https://github.com/matthiaskoenig/pymetadata"
 Issues = "https://github.com/matthiaskoenig/pymetadata/issues"
 Download = "https://pypi.org/project/pymetadata"
 
+[tool.hatch.version]
+path = "./src/pymetadata/__init__.py"
 
 #[options]
 #zip_safe = True
@@ -91,35 +93,16 @@ Download = "https://pypi.org/project/pymetadata"
 #[bdist_wheel]
 #universal = 1
 
-# -----
-
-#[bumpversion]
-#current_version = 0.4.4
-#commit = True
-#tag = True
-#parse = (?P<major>\d+)
-#	\.(?P<minor>\d+)
-#	\.(?P<patch>\d+)
-#	(?P<release>[a]*)(?P<num>\d*)
-#serialize =
-#	{major}.{minor}.{patch}{release}{num}
-#	{major}.{minor}.{patch}
-#tag_name = {new_version}
-
-
-#[bumpversion:part:release]
-#optional_value = placeholder
-#first_value = placeholder
-#values =
-#	placeholder
-#	a
+# includes for distribution
+#include LICENSE
+#include README.rst
+#include src/pymetadata/py.typed
 #
-#[bumpversion:file:setup.py]
-#search = version="{current_version}"
-#replace = version="{new_version}"
-#
-#[bumpversion:file:src/pymetadata/__init__.py]
-#search = __version__ = "{current_version}"
-#replace = __version__ = "{new_version}"
+#recursive-include src/pymetadata/resources/templates *
+#include src/pymetadata/resources/chebi_webservice_wsdl.xml
+#include src/pymetadata/resources/identifiers_registry.json
+
+
+
 
 
