--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,11 +51,12 @@ jobs:
       run: echo "version=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip setuptools wheel
-        python -m pip install twine
+        python -m pip install --upgrade pip
+        python -m pip install hatch twine
 
     - name: Build package
-      run: python setup.py sdist bdist_wheel
+      # run: python setup.py sdist bdist_wheel
+      run: hatch build
     - name: Check the package
       run: twine check dist/*
     - name: Publish to PyPI
