--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,19 +25,26 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
+
+    - name: Install uv and set the python version
+      uses: astral-sh/setup-uv@v5
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip wheel
-        python -m pip install tox tox-gh-actions
+        enable-cache: true
 
-    # Update output format to enable automatic inline annotations.
+    #    - name: Set up Python ${{ matrix.python-version }}
+    #      uses: actions/setup-python@v5
+    #      with:
+    #        python-version: ${{ matrix.python-version }}
+    #    - name: Install dependencies
+    #      run: |
+    #        python -m pip install --upgrade pip wheel
+    #        python -m pip install tox tox-gh-actions
+
     - name: Test with tox
       run:
-        tox --
+        uvx --with tox-uv tox --
+        # tox --
 
   release:
     needs: test
