--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,13 @@
 # --- tox -----------------------------------------------------------------------------------------------------------
 [tox]
-envlist = mypy, py3{10,11,12,13}
+envlist = mypy, py3.{10,11,12,13}
 
 [gh-actions]
 python =
-    3.10: py310
-    3.11: py311
-    3.12: py312
-    3.13: py313
+    3.10: py3.10
+    3.11: py3.11
+    3.12: py3.12
+    3.13: py3.13
 
 [testenv]
 package = wheel
