--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: CI-CD
 
-on: [push]
+on: [ push, pull_request ]
 jobs:
   test:
     runs-on: ${{ matrix.os }}
@@ -25,26 +25,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-
     - name: Install uv and set the python version
       uses: astral-sh/setup-uv@v5
       with:
         python-version: ${{ matrix.python-version }}
         enable-cache: true
-
-    #    - name: Set up Python ${{ matrix.python-version }}
-    #      uses: actions/setup-python@v5
-    #      with:
-    #        python-version: ${{ matrix.python-version }}
-    #    - name: Install dependencies
-    #      run: |
-    #        python -m pip install --upgrade pip wheel
-    #        python -m pip install tox tox-gh-actions
-
     - name: Test with tox
       run:
         uvx --with tox-uv tox -e py${{ matrix.python-version }}
-        # tox --
 
   release:
     needs: test
