--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "hatchling.build"
 name = "pymetadata"
 dynamic = ["version"]
 description = "pymetadata are python utilities for working with metadata."
-readme = "README.rst"
+readme = "README.md"
 requires-python = ">=3.10"
 authors = [
 	{name="Matthias König", email="konigmatt@googlemail.com"}
