Fix #6, documentation created and hosted

--- a/.bumpversion.toml
+++ b/.bumpversion.toml
@@ -17,3 +17,6 @@ commit_args = ""
 
 [[tool.bumpversion.files]]
 filename = "./src/pymetadata/__init__.py"
+
+[[tool.bumpversion.files]]
+filename = "./_docs/_quarto.yml"
